tests/NormalTests/paczka1/fuzzy1/42510340.err
Error in line 2: cvqN S566 47,1
Error in line 3: cvqN A263 13,8
Error in line 8: rfMFYv A822 43,1
Error in line 15: i5lbTefy S733 80,2
Error in line 13: cvqN A263 40,3
Error in line 30: cvqN A822 68,1
